dark mode fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 * {box-sizing: border-box;}
+/* This controls the Chart Title */
+ #chart{
+  font-size: 16px;
+  
+}
+
+.dark #chart{
+  font-size: 16px;
+  fill: white;
+  color: white;
+}
+
 
 
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #fff;
   display: flex;
-  
   flex-direction: column;
   text-align: center;
   min-height: 100vh;
-  margin: 0;
+  margin: 5;
   transition: background 0.2s linear;
 }
 
 
-body.dark {background-color: #292c35;
-
+body.dark {
+  background-color: #292c35;
+  color: white;
+  fill: white;
 } /* #9b59b6 */
 
 
@@ -28,10 +41,6 @@ body.dark {background-color: #292c35;
   color: white;
 }
 .dark p {
-  color: white;
-}
-
-.dark #chart {
   color: white;
 }
 
